--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-container
-        image: kenchuks44/my-repo:reactapp-1.0
+        image: kenchuks44/my-repo:jma-1.0
         ports:
         - containerPort: 8080
       imagePullSecrets:
