--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -18,4 +18,4 @@ spec:
         ports:
         - containerPort: 8080
       imagePullSecrets:
-      - name: dockerhub-secret
+      - name: my-secret
